--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_core : ^0.5.0
+  cloud_firestore: ^0.14.1+2
+#  firebase_analytics: ^5.0.2
+
   permission_handler: ^5.0.1+1
 
   sqflite: any
@@ -37,6 +41,8 @@ dependencies:
 
   focused_menu: ^1.0.0
   animated_text_kit: ^2.2.0
+  flutter_rating_bar: ^3.0.1+1
+  flare_flutter: ^1.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
