--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
 
   firebase_core : ^0.5.0
   cloud_firestore: ^0.14.1+2
-#  firebase_analytics: ^5.0.2
+  firebase_analytics: ^5.0.2
+  firebase_messaging: ^7.0.2
 
+  upgrader: ^2.6.0
   permission_handler: ^5.0.1+1
 
   sqflite: any
