--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   open_file: 2.0.3
 
   share: ^0.6.5+2
+  esys_flutter_share: ^1.0.2
   url_launcher: ^5.7.2
 
   focused_menu: ^1.0.0
