--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.2+2
+version: 2.0.1+3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -42,7 +42,8 @@ dependencies:
   esys_flutter_share: ^1.0.2
   url_launcher: ^5.7.2
   receive_sharing_intent: ^1.4.1
-
+  youtube_player_flutter: ^8.0.0
+  
   focused_menu: ^1.0.0
   animated_text_kit: ^2.2.0
   flutter_rating_bar: ^3.0.1+1
